CVSL-1368: Update get court events endpoint to allow multiple booking ids.