@@ -1,5 +1,5 @@
 plugins {
-  id("uk.gov.justice.hmpps.gradle-spring-boot") version "5.5.0"
+  id("uk.gov.justice.hmpps.gradle-spring-boot") version "5.4.1"
   kotlin("plugin.spring") version "1.9.10"
   kotlin("plugin.jpa") version "1.9.10"
   kotlin("plugin.lombok") version "1.9.10"
@@ -32,13 +32,10 @@ ext["rest-assured.version"] = "5.1.1"
 // Temporarily keep hibernate at 6.2.5 until https://hibernate.atlassian.net/jira/software/c/projects/HHH/issues/HHH-16926 is fixed in 6.2.7
 ext["hibernate.version"] = "6.2.5.Final"
 
-// Temporarily keep serenity at 3.x until can upgrade
-val serenityVersion by extra("3.9.8")
-
 dependencies {
   annotationProcessor("org.springframework.boot:spring-boot-configuration-processor")
-  annotationProcessor("org.projectlombok:lombok:1.18.30")
-  testAnnotationProcessor("org.projectlombok:lombok:1.18.30")
+  annotationProcessor("org.projectlombok:lombok:1.18.28")
+  testAnnotationProcessor("org.projectlombok:lombok:1.18.28")
 
   implementation("org.springframework.boot:spring-boot-starter-aop")
   implementation("org.springframework.boot:spring-boot-starter-validation")
@@ -59,23 +56,23 @@ dependencies {
   implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0")
 
   implementation("org.apache.commons:commons-lang3:3.13.0")
-  implementation("commons-io:commons-io:2.14.0")
+  implementation("commons-io:commons-io:2.13.0")
   implementation("com.google.guava:guava:32.1.2-jre")
   implementation("org.apache.commons:commons-text:1.10.0")
   implementation("com.oracle.database.jdbc:ojdbc10:19.20.0.0")
   implementation("org.hibernate.orm:hibernate-community-dialects")
   implementation("com.fasterxml.jackson.module:jackson-module-kotlin")
 
-  compileOnly("org.projectlombok:lombok:1.18.30")
+  compileOnly("org.projectlombok:lombok:1.18.28")
 
   runtimeOnly("org.hsqldb:hsqldb:$hsqldbVersion")
   runtimeOnly("org.flywaydb:flyway-core")
 
   testImplementation("org.springframework.boot:spring-boot-test-autoconfigure")
   testImplementation("org.springframework.boot:spring-boot-starter-webflux")
-  testImplementation("io.rest-assured:rest-assured:5.3.2")
-  testImplementation("io.rest-assured:json-schema-validator:5.3.2")
-  testImplementation("io.rest-assured:spring-mock-mvc:5.3.2")
+  testImplementation("io.rest-assured:rest-assured:5.3.1")
+  testImplementation("io.rest-assured:json-schema-validator:5.3.1")
+  testImplementation("io.rest-assured:spring-mock-mvc:5.3.1")
   testImplementation("org.springframework.security:spring-security-test")
   testImplementation("com.google.code.gson:gson:2.10.1")
   testImplementation("org.mockito:mockito-inline:5.2.0")
@@ -83,20 +80,20 @@ dependencies {
   testImplementation("org.powermock:powermock-module-junit4:2.0.9")
 
   testImplementation("com.tngtech.java:junit-dataprovider:1.13.1")
-  testImplementation("net.javacrumbs.json-unit:json-unit-assertj:3.2.2")
+  testImplementation("net.javacrumbs.json-unit:json-unit-assertj:3.0.0")
 
-  testImplementation("net.serenity-bdd:serenity-core:$serenityVersion")
-  testImplementation("net.serenity-bdd:serenity-junit:$serenityVersion")
-  testImplementation("net.serenity-bdd:serenity-spring:$serenityVersion")
-  testImplementation("net.serenity-bdd:serenity-cucumber:$serenityVersion")
+  testImplementation("net.serenity-bdd:serenity-core:3.9.8")
+  testImplementation("net.serenity-bdd:serenity-junit:3.9.8")
+  testImplementation("net.serenity-bdd:serenity-spring:3.9.8")
+  testImplementation("net.serenity-bdd:serenity-cucumber:3.9.8")
   testImplementation("com.paulhammant:ngwebdriver:1.2")
-  testImplementation("org.wiremock:wiremock:3.2.0")
-  testImplementation("io.jsonwebtoken:jjwt-impl:0.12.0")
-  testImplementation("io.jsonwebtoken:jjwt-jackson:0.12.0")
+  testImplementation("org.wiremock:wiremock:3.0.3")
+  testImplementation("io.jsonwebtoken:jjwt-impl:0.11.5")
+  testImplementation("io.jsonwebtoken:jjwt-jackson:0.11.5")
   testImplementation("io.swagger.parser.v3:swagger-parser:$swaggerParserVersion")
-  testImplementation("io.opentelemetry:opentelemetry-sdk-testing:1.30.1")
+  testImplementation("io.opentelemetry:opentelemetry-sdk-testing:1.29.0")
 
-  testCompileOnly("org.projectlombok:lombok:1.18.30")
+  testCompileOnly("org.projectlombok:lombok:1.18.28")
 }
 
 java {
@@ -119,9 +116,6 @@ tasks {
     }
     minHeapSize = "128m"
     maxHeapSize = "2048m"
-
-    // required for jjwt 0.12 - see https://github.com/jwtk/jjwt/issues/849
-    jvmArgs("--add-exports", "java.base/sun.security.util=ALL-UNNAMED")
   }
 
   register<Test>("testIntegration") {
@@ -130,9 +124,6 @@ tasks {
     }
     minHeapSize = "128m"
     maxHeapSize = "2048m"
-
-    // required for jjwt 0.12 - see https://github.com/jwtk/jjwt/issues/849
-    jvmArgs("--add-exports", "java.base/sun.security.util=ALL-UNNAMED")
   }
 
   register<Test>("testWithSchemaNomis") {
@@ -142,9 +133,6 @@ tasks {
     }
     minHeapSize = "128m"
     maxHeapSize = "2048m"
-
-    // required for jjwt 0.12 - see https://github.com/jwtk/jjwt/issues/849
-    jvmArgs("--add-exports", "java.base/sun.security.util=ALL-UNNAMED")
   }
 
   register<Test>("testWithSchemaNomisOracle") {
@@ -159,9 +147,6 @@ tasks {
     useJUnitPlatform {
       include("**/executablespecification/*")
     }
-
-    // required for jjwt 0.12 - see https://github.com/jwtk/jjwt/issues/849
-    jvmArgs("--add-exports", "java.base/sun.security.util=ALL-UNNAMED")
   }
 
   withType<org.jetbrains.kotlin.gradle.tasks.KotlinCompile> {
